added analysis function to R to look at overlaps of cas9 cut sites and lam reads

--- a/Polb_Targeting_Tn5_Master.ipynb
+++ b/Polb_Targeting_Tn5_Master.ipynb
@@ -3085,7 +3085,7 @@
     "### 3. Use bowtie2 genome that has the targeting seq in it added\n",
     "### 4. Do global end-to-end alignment\n",
     "### 5. Do a local alignment\n",
-    "### 6. process bam file and pull out the high mapQ reads\n",
+    "### 6. process bam file and pull out the high mapQ primary reads\n",
     "\n",
     "The idea here is to trim the sequence up to the cut on both reads and then do a global alignment end-to-end agasint the human genome.\n",
     "\n",
@@ -3413,317 +3413,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## this is if you want to do pipeline2 one piece at a time"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/media/edanner/NewUbuntuSpace/Workspace/LinearAmp/Sequence2_191129_MN00157_0047_A000H2GWGF/P_Eric4_Tn5\n",
-      "\n",
-      "this is for pipeline2 polb fwd (row 0 in sheet) \n",
-      "\n",
-      "seq_to_breaksite TGGTTTTATTTCACCCCATGATAGTAATTATATCACTTCTGATCTGTTAAGAATAGACCTTTTAAAAGTATTGGATAACTTAGAGATGAGACATCTTCAGTTACTCTGTTATTCACCTATTACTCCTTAGGTTACTTGTGAATAATTTTGTGTGGGTCA \n",
-      "\n",
-      "directory /media/edanner/NewUbuntuSpace/Workspace/LinearAmp/Sequence2_191129_MN00157_0047_A000H2GWGF/P_Eric4_Tn5\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "NGS_req-ID                                                                     A000H2GWGF\n",
-       "name                                                                        Tn5_Pol50_pbF\n",
-       "Sample                                                                               Polb\n",
-       "description                                   MiniSeq_K562_PolbHIROS_50per_unsorted_polbF\n",
-       "Control sample (Y/N)                                                                    N\n",
-       "Notes                                                                                 NaN\n",
-       "Dilution                                                                              NaN\n",
-       "Cell name_type                                                                       K562\n",
-       "UMI_Len                                                                        NNNNNNNNNN\n",
-       "IndexI7Primer                                                                      prE368\n",
-       "I7_Index_ID                                                          P7_N701_SBS12nextera\n",
-       "index_I1                                                                             N701\n",
-       "barcode_I1                                                                       TAAGGCGA\n",
-       "I5_Index_ID                                                              P5_UMI_N50_Tn5-A\n",
-       "index_I2                                                                             N501\n",
-       "barcode_I2                                                                       GCGATCTA\n",
-       "primer1_ForNest                                                                     prE86\n",
-       "primer                                                                             prE361\n",
-       "genome                                                                               hg38\n",
-       "chr                                                                                  chr8\n",
-       "start                                                                            42349731\n",
-       "end                                                                              42349755\n",
-       "strand                                                                                  +\n",
-       "guide_1                                                                            Polb#3\n",
-       "sequence_guide_1                                                     TAATTTTGTGTGGGTCACCC\n",
-       "genome_guide_1                                                                       hg38\n",
-       "chr_guide_1                                                                          chr8\n",
-       "start_guide_1                                                                    42349873\n",
-       "end_guide_1                                                                      42349892\n",
-       "strand_guide_1                                                                          +\n",
-       "guide_2                                                                            Polb#4\n",
-       "sequence_guide_2                                                     TGAAACCAGTTTGGTTACCC\n",
-       "genome_guide_2                                                                       hg38\n",
-       "chr_guide_2                                                                          chr8\n",
-       "start_guide_2                                                                    42350280\n",
-       "end_guide_2                                                                      42350299\n",
-       "strand_guide_2                                                                          +\n",
-       "guide_3                                                                               NaN\n",
-       "sequence_guide_3                                                                      NaN\n",
-       "genome_guide_3                                                                        NaN\n",
-       "chr_guide_3                                                                           NaN\n",
-       "start_guide_3                                                                         NaN\n",
-       "end_guide_3                                                                           NaN\n",
-       "strand_guide_3                                                                        NaN\n",
-       "genome_plus_targeting                                              hg38_plus_targetvector\n",
-       "Replace_Doner_Name                                                               pE038_MC\n",
-       "Replace_Donor                           TGACCCACACAAAATTAGTCTTTTAGCAGACTGGTATGTTTCCAAT...\n",
-       "Donor (single strand; double strand)                                                  NaN\n",
-       "plamid_name                                                            pE049_WO_redundant\n",
-       "plasmid_sequence                        ttacataacttacggtaaatggcccgcctggctgaccgcccaacga...\n",
-       "genomic_background                                                                    NaN\n",
-       "Name: 0, dtype: object"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "########### all inputs required for pipeline2 #####\n",
-    "#This is for the sequence to the breaksite for the pipeline of genomic alignment \n",
-    "# make sure the sequences are capital\n",
-    "\n",
-    "# number in list of \n",
-    "\n",
-    "#0 is polbRev\n",
-    "#1 is polbRev \n",
-    "#2 is mcherry_rev\n",
-    "#3 is mcherry_fwd\n",
-    "\n",
-    "\n",
-    "\n",
-    "check_plasmid_insertions = 1\n",
-    "ncpu = 4\n",
-    "window_size = 15\n",
-    "amplicon_window_around_cut = 1000\n",
-    "min_MAPQ = 5\n",
-    "min_AS = -180\n",
-    "process_AMP_seq_run = 0 #off\n",
-    "\n",
-    "############# Directory ############\n",
-    "#this is a minimal directory of only ~300 files for quick debugging\n",
-    "#directory = '/media/edanner/NewUbuntuSpace/Workspace/LinearAmp/Sequence2_191129_MN00157_0047_A000H2GWGF/P_Eric4_Tn5/10000Reads'\n",
-    "\n",
-    "directory = '/media/edanner/NewUbuntuSpace/Workspace/LinearAmp/Sequence2_191129_MN00157_0047_A000H2GWGF/P_Eric4_Tn5'\n",
-    "\n",
-    "print(directory)\n",
-    "\n",
-    "\n",
-    "print()\n",
-    "seq_to_breaksite = [['TGGTTTTATTTCACCCCATGATAGTAATTATATCACTTCTGATCTGTTAAGAATAGACCTTTTAAAAGTATTGGATAACTTAGAGATGAGACATCTTCAGTTACTCTGTTATTCACCTATTACTCCTTAGGTTACTTGTGAATAATTTTGTGTGGGTCA', 'this is for pipeline2 polb fwd (row 0 in sheet)'],\n",
-    "                    ['ACAAAAGAGGCCAAGCTGGAGCAGGAAATAGATGCACACGGAGGAAATGGTAGTGGAGTTCAGAGGAGGGAGAGGTTCTTTCTGCCTGGG','this is for pipeline2 polb rev (row 1 in sheet)'],\n",
-    "                    ['GTTAGCAGACTTCCTCTGCCCTCAATCTTTAAGAAAAAAAAAAGTCTAACAATGATTTAGGAATGCTTTGAGGACTTAAATGATCTTATTGGAAACATACCAGTCTGCTAAAAGACTAATTTTGTGTGGGTCA','this is for pipeline2 mCherryRev, row2 in sheet'],\n",
-    "                    ['GCAGGAGCTCGTCGACCCATGGGGGCCCGCCCCAACTGGGGTAACCTTTGGGCTCCCCGGGCGCGACTAGTGAATTCAGATCTGATATCTCTAGAAGTCCTGGG', 'this is for pipeline2 mCherryFWD, row3 in sheet'],\n",
-    "                    ['TGGTTTTATTTCACCCCATGATAGTAATTATATCACTTCTGATCTGTTAAGAATAGACCTTTTAAAAGTATTGGATAACTTAGAGATGAGACATCTTCAGTTACTCTGTTATTCACCTATTACTCCTTAGGTTACTTGTGAATAATTTTGTGTGGGTCA', 'this is for pipeline2 WT polb fwd (row 4 in sheet)'],\n",
-    "                    ['ACAAAAGAGGCCAAGCTGGAGCAGGAAATAGATGCACACGGAGGAAATGGTAGTGGAGTTCAGAGGAGGGAGAGGTTCTTTCTGCCTGGG','this is for pipeline2 WTpo lb rev (row 5 in sheet)']]\n",
-    "\n",
-    "  \n",
-    "master_number = 0\n",
-    "    \n",
-    "    \n",
-    "seq_primer_to_breaksite = seq_to_breaksite[master_number][0]\n",
-    "print(seq_to_breaksite[master_number][1],'\\n')    \n",
-    "print('seq_to_breaksite', seq_primer_to_breaksite, '\\n')\n",
-    "\n",
-    "#check amplicon info and directory\n",
-    "print('directory', directory)\n",
-    "\n",
-    "def get_csv_data(dir_sample, line_of_data_from_csv):\n",
-    "    sample_info_filename = os.path.join(dir_sample, 'sample_info.csv')\n",
-    "    experiments = pd.read_csv(sample_info_filename)\n",
-    "    return experiments.loc[line_of_data_from_csv]\n",
-    "\n",
-    "\n",
-    "#the amplicon info is related to the line on the csv file. It is indexed from 0. For PolbF we use 0.\n",
-    "#it is on my extera space so need to make sure that is mounted. (first thing to check if it throws and error)\n",
-    "\n",
-    "\n",
-    "amplicon_info = get_csv_data(directory, master_number)\n",
-    "\n",
-    "###########check waht is printed below #######\n",
-    "amplicon_info\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "minimum length after trimming is: 35\n",
-      "tn5 analysis\n"
-     ]
-    }
-   ],
-   "source": [
-    "#Trim the break up to the cut site\n",
-    "\n",
-    "trim_fastq_to_break(directory, amplicon_info, seq_primer_to_breaksite, length = 35)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### alignments of sequences trimmed to the break"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tn5 analysis\n",
-      "-----  now making bed file   ------\n",
-      "made global bed file: N701 _ N501\n"
-     ]
-    }
-   ],
-   "source": [
-    "#this aligns everything after the break to end-to-end keep_sam=1 means keep the sam file\n",
-    "align_afterbreak_end_to_end_genome_global(directory, amplicon_info, assembly_plus_targetvector, keep_sam=1)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tn5 analysis\n",
-      "sam file deleted\n",
-      "-----  now making bed file   ------\n",
-      "made local bed file: N704 _ N501\n"
-     ]
-    }
-   ],
-   "source": [
-    "#this aligns everything in the local format wehre it can soft clip the ends keep_sam=1 means keep the sam file\n",
-    "align_afterbreaks_genome_local(directory, 1, amplicon_info, assembly_plus_targetvector, keep_sam=0)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Preparing the files for plotting in R. This make the bed files\n",
-    "#### The bed files are filtered for primary reads of high quality"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "working\n",
-      "-----  now making bed file   ------\n",
-      "made global bed file: N701 _ N501\n"
-     ]
-    }
-   ],
-   "source": [
-    "#this filteres all the GLOBAL reads.\n",
-    "\n",
-    "final_trimmed_bam_filtered_mapq_AS_primary(directory, 'global', amplicon_info)\n",
-    "\n",
-    "\n",
-    "# THE BED IS MADE FROM THE FILTERED READS\n",
-    "### This should work for automatic bed generation, but it doesn't produce anythign and no ideaw way\n",
-    "\n",
-    "print('-----  now making bed file   ------')\n",
-    "\n",
-    "\n",
-    "N7 = amplicon_info['index_I1']\n",
-    "N5 = amplicon_info['index_I2']\n",
-    "file_trimmed_genome_global_bed = create_filename(directory, N7, N5, 'break_trimmed_genome_global_bed')\n",
-    "file_sorted_bam_genome_global = create_filename(directory, N7, N5, 'break_trimmed_filtered_and_sorted_genome_global')\n",
-    "\n",
-    "!bam2bed < {file_sorted_bam_genome_global} > {file_trimmed_genome_global_bed}\n",
-    "\n",
-    "\n",
-    "bed_folder = os.path.abspath(create_filename(directory, N7, N5, 'all_bed'))\n",
-    "\n",
-    "\n",
-    "if not os.path.exists(bed_folder):\n",
-    "    os.mkdir(bed_folder)\n",
-    "\n",
-    "shutil.copy(file_trimmed_genome_global_bed, bed_folder)\n",
-    "\n",
-    "print('made global bed file:', N7, '_', N5 )\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Filtering and making bed file for local alignments.  BED FILE IS MADE OF FILTERED READS\n",
-    "\n",
-    "final_trimmed_bam_filtered_mapq_AS_primary(directory, 'local', amplicon_info)\n",
-    "\n",
-    "\n",
-    "print('-----  now making bed file   ------')\n",
-    "\n",
-    "N7 = amplicon_info['index_I1']\n",
-    "N5 = amplicon_info['index_I2']\n",
-    "file_trimmed_genome_local_bed = create_filename(directory, N7, N5, 'break_trimmed_genome_local_bed')\n",
-    "file_sorted_bam_genome_local = create_filename(directory, N7, N5, 'break_trimmed_filtered_and_sorted_bam_genome_local')\n",
-    "\n",
-    "\n",
-    "!bam2bed < {file_sorted_bam_genome_local} > {file_trimmed_genome_local_bed}\n",
-    "\n",
-    "\n",
-    "bed_folder = os.path.abspath(create_filename(directory, N7, N5, 'all_bed'))\n",
-    "\n",
-    "if not os.path.exists(bed_folder):\n",
-    "    os.mkdir(bed_folder)\n",
-    "\n",
-    "shutil.copy(file_trimmed_genome_local_bed, bed_folder)\n",
-    "\n",
-    "print('made local bed file:', N7, '_', N5 )"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### take the bed files and then use R script to plot"
+    "### some of the pipeline 2 data"
    ]
   },
   {
