--- a/Polb_Demultiplex_Tn5Samples.ipynb
+++ b/Polb_Demultiplex_Tn5Samples.ipynb
@@ -563,6 +563,8 @@
     "### File Data\n",
     "#unsorted files: /media/edanner/NewUbuntuSpace/Workspace/LinearAmp/Sequence2_191129_MN00157_0047_A000H2GWGF/P_Eric4_BCL2Fastq_only\n",
     "#Take the first 1000 files (5000 lines)\n",
+    "#command to view first 17 lines of files\n",
+    "$head -17 filelocation_or_name\n",
     "\n",
     "#### of all 4 file types - If you do it multiple times it just appends text lines to bottom of text editor\n",
     "#(terminal)\n",
@@ -573,6 +575,13 @@
     "\n",
     "#### check how many lines: (terminal)\n",
     "$wc -l Undetermined_S0_I1_001.fastq\n",
+    "\n",
+    "wc -l Del_Report_Cntl.fastq\n",
+    "\n",
+    "$head -n4000 Del_Report_Cntl.fastq >> Del_Report_Cntl1000.fastq\n",
+    "$head -n4000 Del_Report_Targeted.fastq >> Del_Report_Targeted1000.fastq\n",
+    "$head -n4000 Polb_Cntl.fastq >> Polb_Cntl1000.fastq\n",
+    "$head -n4000 Polb_Targeted.fastq >> Polb_Targeted1000.fastq\n",
     "\n",
     "### can compress with gZip\n",
     "$gzip Undetermined_S0_I1_001.fastq\n",
@@ -677,14 +686,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.17"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
